--- a/Croatian/main/MiGalleryLockscreen.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiGalleryLockscreen.apk/res/values-hr/strings.xml
@@ -113,9 +113,9 @@
   <string name="cancel_button">Da</string>
   <string name="cancel_international">Odustani</string>
   <string name="cancel_lockscreen">Odustani</string>
-  <string name="cancel_mfashiongallery_service">Otkaži Wallpaper Carousel usluge</string>
+  <string name="cancel_mfashiongallery_service">Odustani Wallpaper Carousel usluge</string>
   <string name="cancel_network">Izlaz</string>
-  <string name="cancel_service">Otkaži usluge</string>
+  <string name="cancel_service">Odustani usluge</string>
   <string name="cancel_service_running">Otkazivanje usluga…</string>
   <string name="cancel_service_summary">"Ako nastavite, otkazat ćete Wallpaper Carousel usluge. Osobni podaci koji su već prikupljeni i zadržani bit će izbrisani unutar određenog razdoblja u skladu s primjenjivim zakonima i propisima, osim ako nije drugačije propisano. Želite li svejedno otkazati usluge?"</string>
   <string name="carousel_declaration_btn_text">Uključi Wallpaper Carousel</string>
@@ -951,6 +951,19 @@ mm"</string>
   <string name="shortcut_failed">"Ne mogu izraditi prečac"</string>
   <string name="show_wallpaper_loop_entry_title">Postavke dijaprojekcije</string>
   <string name="sliding_on_unlock">Povuci gore za otključati</string>
+  <string name="sst_carousel_setting">Postavke</string>
+  <string name="sst_disable_dlg_cancel">Odustani</string>
+  <string name="sst_disable_dlg_close">Isključi</string>
+  <string name="sst_disable_dlg_content">"Ako isključite prezentaciju, više nećete vidjeti istaknute slike na zaključanom zaslonu. Isključiti svejedno?"</string>
+  <string name="sst_disable_dlg_title">Isključiti prezentaciju?</string>
+  <string name="sst_disable_swipe_right_dlg_content">"Nećete moći prijeći prstom udesno na zaključanom zaslonu da biste otvorili Wallpaper Carousel."</string>
+  <string name="sst_disable_swipe_right_dlg_title">Isključiti \"Povucite prstom udesno sa zaključanog zaslona\"?</string>
+  <string name="sst_lock_screen_carousel">Prezentacija</string>
+  <string name="sst_lockscreen_swipe_right">Povucite prstom udesno sa zaključanog zaslona</string>
+  <string name="sst_lockscreen_swipe_right_desc">"Povucite prstom udesno sa zaključanog zaslona kada je osvijetljen za pregledavanje više sadržaja"</string>
+  <string name="sst_mobile_data_only_new">Učitavanje slika putem mobilnih podataka</string>
+  <string name="sst_morning_greeting">Jutarnje čestitke</string>
+  <string name="sst_morning_greeting_history_picture">Povijest jutarnjih čestitki</string>
   <string name="sst_ai_wallpaper_Activity_title">Stvorite AI pozadine</string>
   <string name="sst_ai_wallpaper_desc">Rukom crtane slike mogu se koristiti za izradu pozadina visoke razlučivosti u više stilova pomoću AI</string>
   <string name="sst_ai_wallpaper_title">Izrađivač AI pozadine</string>
@@ -1040,7 +1053,7 @@ mm"</string>
   <string name="subscribe_dlg_title">Dodajte svoje omiljene slike u miks</string>
   <string name="subscribe_free">Pretplatite se</string>
   <string name="subscribe_item_checked">Pretplaćeno</string>
-  <string name="subscribe_item_unchecked">Otkaži pretplatu</string>
+  <string name="subscribe_item_unchecked">Odustani pretplatu</string>
   <string name="subscribe_success_content_per_5_minutes">Promjeni sliku pozadine svakih 5 minuta</string>
   <string name="subscribe_success_content_per_day">Promjeni sliku pozadine svaki dan</string>
   <string name="subscribe_success_content_per_hour">Promjeni sliku pozadine svakog sata</string>
