--- a/Croatian/main/MiLinkService.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiLinkService.apk/res/values-hr/strings.xml
@@ -480,6 +480,7 @@
   <string name="circulate_network_connect_failed_pad_message_iPad">Provjerite jesu li vaš tablet i iPad prijavljeni na isti račun i povezani na istu mrežu ili pogledajte pomoć.</string>
   <string name="circulate_network_connect_failed_pad_message_iPhone">Provjerite jesu li vaš tablet i iPhone prijavljeni na isti račun i povezani na istu mrežu ili pogledajte pomoć.</string>
   <string name="circulate_network_connect_failed_pad_message_unsupport_pad">"Veza s tabletima nije podržana"</string>
+  <string name="circulate_network_connect_failed_pad_pc_not_supported">"Ovaj uređaj nije podržan. Provjerite ispunjava li model vašeg uređaja ili verzija sustava zahtjeve. Također možete pogledati pomoć."</string>
   <string name="circulate_network_connect_failed_title">"Nije moguće povezivanje"</string>
   <string name="circulate_network_connect_success_title">Povezano putem QR koda</string>
   <string name="circulate_network_connecting_message">Držite telefon otključanim s uključenim zaslonom.</string>
