--- a/Croatian/main/CloudService.apk/res/values-hr/strings.xml
+++ b/Croatian/main/CloudService.apk/res/values-hr/strings.xml
@@ -704,6 +704,7 @@ Provjerite koristite li povezani Xiaomi račun kao svoj MIUI račun."</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
+  <string name="miuix_appcompat_action_sheet_default_message">Odaberi</string>
   <string name="miuix_appcompat_actionbar_immersion_button_more_description">Više</string>
   <string name="miuix_appcompat_cancel_description">Odustani</string>
   <string name="miuix_appcompat_confirm_description">Potvrdi</string>
