--- a/Croatian/main/DownloadProviderUi.apk/res/values-hr/strings.xml
+++ b/Croatian/main/DownloadProviderUi.apk/res/values-hr/strings.xml
@@ -45,7 +45,11 @@
   <string name="ad_download">Instaliraj</string>
   <string name="all_share_files_content">Odabrane datoteke su već izbrisane.</string>
   <string name="app_label">Preuzimanja</string>
-  <string name="app_name">MiuiSettingsCommonLib</string>
+  <string name="bottomsheet_action_collapse">Sakrij donji list</string>
+  <string name="bottomsheet_action_expand">Proširi donji list</string>
+  <string name="bottomsheet_action_expand_halfway">Proširi do pola</string>
+  <string name="bottomsheet_drag_handle_clicked">Dvaput dodirnuta ručka za povlačenje</string>
+  <string name="bottomsheet_drag_handle_content_description">Ručka za povlačenje</string>
   <string name="bt_download">Preuzmi</string>
   <string name="bt_path_not_exit">"Ova putanja ne postoji"</string>
   <string name="bt_xunlei_open_info">Koristiti Xunlei Engine za otvaranje ovakvih poveznica?</string>
@@ -178,6 +182,7 @@
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
+  <string name="miuix_appcompat_action_sheet_default_message">Odaberi</string>
   <string name="miuix_appcompat_actionbar_immersion_button_more_description">Više</string>
   <string name="miuix_appcompat_cancel_description">Odustani</string>
   <string name="miuix_appcompat_confirm_description">Potvrdi</string>
