--- a/Croatian/main/FileExplorer.apk/res/values-hr/strings.xml
+++ b/Croatian/main/FileExplorer.apk/res/values-hr/strings.xml
@@ -940,6 +940,8 @@ Pokušajte premjestiti datoteke sa svog uređaja na Mi Drive."</string>
   <string name="tab_source">Aplikacije</string>
   <string name="talkback_new_folder_name">Naziv mape</string>
   <string name="talkback_new_name">Novi naziv</string>
+  <string name="tap_share_cloud_file_need_cache">Prvo preuzmite odabrane stavke</string>
+  <string name="tap_share_folder_unsupported">"Mape se ne mogu dijeliti"</string>
   <string name="tap_share_no_local_files">Idite na Više > Preuzmi na uređaj kako biste mogli dijeliti</string>
   <string name="terabyteShort">TB</string>
   <string name="text_input_layout_default_error">Ovo je zadana pogreška</string>
