--- a/Croatian/main/MiSound.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiSound.apk/res/values-hr/strings.xml
@@ -63,6 +63,8 @@
   <string name="customization_pause_tip">Zaustaviti testiranje? Za nastavak povežite slušalice.</string>
   <string name="customization_quit">Izlaz</string>
   <string name="date_time_picker_dialog_title">Postavite datum i vrijeme</string>
+  <string name="distance_perception">Osjećaj udaljenosti</string>
+  <string name="distance_perception_summary">Kada je uključen imerzivni zvuk, dinamički se prilagođava glasnoća i zvučno polje prema vašoj udaljenosti od zaslona</string>
   <string name="dolby_atoms">Dolby Atmos</string>
   <string name="dolby_dax_geq_bar_chart_talkback" formatted="false">Ekvalizator, klizač %d, %s.</string>
   <string name="dolby_dax_geq_select_click_tip_talkback">Dvaput dodirnite za aktivaciju</string>
@@ -192,6 +194,8 @@
   <string name="miuix_access_state_desc">Odabrano</string>
   <string name="miuix_accessibility_title">Naslov</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
   <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Završi način rada za uređivanje</string>
   <string name="miuix_appcompat_accessibility_new_message">Nova poruka</string>
   <string name="miuix_appcompat_accessibility_start_edit_action_mode">Pokreni način rada za uređivanje</string>
@@ -213,6 +217,9 @@
   <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
   <string name="miuix_indexer_collect">Zbirke</string>
   <string name="miuix_indexer_selected">Odabrano %s</string>
+  <string name="miuix_pairing_dialog_closable_icon_description">Zatvori</string>
+  <string name="miuix_stretchablewidget_collapsed">Sažeto</string>
+  <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="miuix_progressbar_loading">Učitavanje</string>
   <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povuci za osvježiti</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshed">Gotovo</string>
