--- a/Croatian/main/MiuiAod.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiAod.apk/res/values-hr/strings.xml
@@ -306,6 +306,8 @@ dd.MM."</string>
   <string name="kg_dialog_ai_blocking_for_content_violation_title">Sadržaj može kršiti smjernice</string>
   <string name="kg_dialog_ai_blocking_for_image_not_clear">Provjerite je li glavni subjekt jasan i potpuno vidljiv.</string>
   <string name="kg_dialog_ai_blocking_for_image_not_clear_title">"Ne mogu koristiti ovu sliku"</string>
+  <string name="kg_dialog_ai_blocking_for_not_support_wallpaper">"Ne mogu koristiti umjetnu inteligenciju s ovom pozadinom"</string>
+  <string name="kg_dialog_ai_blocking_for_resolution_too_small">Rezolucija slike pozadine mora biti najmanje %1$d×%2$d px</string>
   <string name="kg_dialog_ai_blocking_for_not_support_video">"Generiranje umjetne inteligencije nije podržano za dinamične pozadine"</string>
   <string name="kg_dialog_ai_blocking_for_service_unavailable">Vaš je račun više puta prekršio naše smjernice. Usluga je trenutno pauzirana. Pokušajte ponovno kasnije.</string>
   <string name="kg_dialog_ai_blocking_for_service_unavailable_title">"Usluga nije dostupna"</string>
@@ -323,6 +325,7 @@ dd.MM."</string>
   <string name="kg_function_button_text_home_pick">Odaberi</string>
   <string name="kg_function_font_filter_type_title">Efekt</string>
   <string name="kg_function_text_component_contents">Prikazane stavke</string>
+  <string name="kg_function_text_omponent_contents">Prikazane stavke</string>
   <string name="kg_function_wallpaper_pinch_to_zoom">Zumiranje i pomicanje s dva prsta</string>
   <string name="kg_gallery_label">Uredi prezentaciju</string>
   <string name="kg_giving_up_editing">Odbaci</string>
