--- a/Croatian/main/MiuiScreenRecorder.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiScreenRecorder.apk/res/values-hr/strings.xml
@@ -49,7 +49,9 @@ Dodirnite za prikaz."</string>
   <string name="button_confirm">U redu</string>
   <string name="button_goon_recorder">Nastavi</string>
   <string name="camera_high_spec_recording">"Ne mogu snimati zaslon tijekom snimanja u %1$s"</string>
+  <string name="cancel">Odbijam</string>
   <string name="cancel_edit">Odustani</string>
+  <string name="candraw_overlays_permission_text">Dopustite aplikaciji Snimaču zaslona da prikazuje stavke preko drugih aplikacija. To dopuštenje možete dati u Postavkama.</string>
   <string name="cannot_change_frames">Broj slika može se prilagoditi samo za snimke s fiksnim brojem slika.</string>
   <string name="cannot_change_parames">"Ne mogu mijenjati parametre tijekom snimanja"</string>
   <string name="cannot_record">"Ne mogu snimiti, pokušajte ponovo kasnije."</string>
@@ -240,6 +242,7 @@ Dodirnite za prikaz."</string>
   <string name="time_picker_label_hour">H</string>
   <string name="time_picker_label_minute">M</string>
   <string name="timer_format">%s</string>
+  <string name="to_open">Postavke</string>
   <string name="today">Danas</string>
   <string name="tomorrow">Sutra</string>
   <string name="tuesday">Utorak</string>
