--- a/Croatian/main/TouchAssistant.apk/res/values-hr/strings.xml
+++ b/Croatian/main/TouchAssistant.apk/res/values-hr/strings.xml
@@ -62,7 +62,9 @@
   <string name="hide_when_fullscreen_intro">Pomakni u stranu prilikom ulaska u cijeli zaslon.</string>
   <string name="mi_ai">Mi AI prečaci</string>
   <string name="miuix_access_state_desc">Odabrano</string>
-  <string name="miuix_alphabet_indexer_name">Indeksna traka</string>
+  <string name="miuix_accessibility_title">Naslov</string>
+  <string name="miuix_appcompat_action_sheet_default_message">Odaberi</string>
+  <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
   <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
   <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
   <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izlaz iz načina uređivanja</string>
